transaction controllers outline

--- a/static/style.css
+++ b/static/style.css
@@ -8,6 +8,7 @@ body > header {
     background-color: rgb(252, 222, 75);
     height: 75px;
     font-size: large;
+    vertical-align: baseline;
 }
 
 #top-bar {
@@ -39,5 +40,4 @@ body > header {
 
 .content {
     padding-top: 10px;
-    padding-left: 18px
 }
