--- a/static/button.css
+++ b/static/button.css
@@ -1,7 +1,7 @@
 .transactions--button {
     margin-top: 15px;
     background-color: rgb(252, 222, 75);
-    width: 49%;
+    width: 100%;
     height: 50px;
     border: none;
     font-family: 'Montserrat';
@@ -17,3 +17,34 @@
 .transactions--button:hover {
     background-color: rgba(252, 222, 75, 0.75);
 }
+
+.edit--button {
+    border: none;
+    background-color: rgb(252, 222, 75);
+    padding: 10px 10px
+}
+
+.edit--button a {
+    text-decoration: none;
+    color: black;
+}
+
+.edit--button:hover {
+    background-color: royalblue;
+}
+
+.delete--button {
+    border: none;
+    background-color: rgb(252, 222, 75);
+    padding: 12px 12px
+}
+
+.delete--button a {
+    text-decoration: none;
+    color: black;
+}
+
+.delete--button:hover {
+    background-color: red;
+}
+
