--- a/templates/transactions/index.html
+++ b/templates/transactions/index.html
@@ -6,19 +6,24 @@
         <th>AMOUNT</th>
         <th>TYPE</th>
         <th>MERCHANT</th>
+        <th>EDIT</th>
+        <th>DELETE</th>
     </tr>
     {% for transaction in transactions %}
     <tr>
         <td>{{ transaction.amount }}</td>
         <td>{{ transaction.tag.spending_type }}</td>
         <td>{{ transaction.merchant.name }}</td>
+        <td><button class="edit--button">
+            <a href="/transactions/edit">&#10003;</a>
+        </button></td>
+        <td><button class="delete--button">
+            <a href="/transactions/<id>">&#10007;</a>
+        </button></td>
     </tr>
     {% endfor %}
 </table>
 <button class="transactions--button">
     <a href="/transactions/new">ADD NEW TRANSACTION</a>
-</button>
-<button class="transactions--button">
-    <a href="/transactions/edit">EDIT A TRANSACTION</a>
 </button>
 {% endblock %}
