--- a/templates/transactions/edit.html
+++ b/templates/transactions/edit.html
@@ -1,7 +1,33 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<form action="/transactions/{{ transaction.id }}", method='post'>
+    <div>
+        <label for="amount">Amount (¥) : </label> 
+        <input type="number" step="100" id="amount" name="amount" value="{{transaction.amount}}">
+    </div>
+    <br>
+    <div>
+        <label for="tag">Update spending type : </label> 
+        <select id="tag" name="tag">
+            <option>{{transaction.tag.spending_type}}</option>
+            {% for tag in all_tags %}
+            <option value="{{ tag.id }}">{{ tag.spending_type }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    <br>
+    <div>
+        <label for="merchant">Update merchant : </label> 
+        <select id="merchant" name="merchant">
+            <option>{{transaction.merchant.name}}</option>
+            {% for merchant in all_merchants %}
+            <option value="{{ merchant.id }}">{{ merchant.name }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    <br>
+    <button type="submit">UPDATE</button>
 
 
 
