before changing display of tag index

--- a/static/style.css
+++ b/static/style.css
@@ -44,3 +44,9 @@ body > header {
 .tag--lists {
     display: flex;
 }
+
+.centred--content {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
