--- a/templates/transactions/new.html
+++ b/templates/transactions/new.html
@@ -27,5 +27,5 @@
     </select>
 </div>
 <br>
-<button type="submit">SUBMIT</button>
+<button class="submit--button" type="submit">SUBMIT</button>
 {% endblock %}
