--- a/static/button.css
+++ b/static/button.css
@@ -1,10 +1,17 @@
+.submit--button {
+    height: 40px;
+    width: 100px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: large;
+}
+
 .transactions--button {
     margin-top: 15px;
     background-color: rgb(252, 222, 75);
     width: 100%;
     height: 50px;
     border: none;
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     font-size: large;
 
 }
@@ -54,8 +61,16 @@
     background-color: rgb(252, 222, 75);
     width: 50%;
     height: 50px;
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     font-size: large;
+}
 
+.add--tag--button > a {
+    text-decoration: none;
+    color: black;
+}
+
+.add--tag--button:hover {
+    background-color: rgba(252, 222, 75, 0.75);
 }
 
