--- a/templates/merchants/edit.html
+++ b/templates/merchants/edit.html
@@ -1,5 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<form action="/merchants/{{ merchant.id }}", method='post'>
+<div>
+    <label for="name">Edit merchant name : </label>
+    <input class="form--box" type="text" id="name" name="name" value="{{merchant.name}}" required>
+</div>
+<br>
+<div>
+    <label for="active">Active? </label>
+    <select class="form--box" id="active" name="active">
+        <option value="true">yes</option>
+        <option value="false">no</option>
+    </select>
+</div>
+<br>
+<button class="submit--button" type="submit">UPDATE</button>
+</form>
 {% endblock %}
