total spend css, inactive tag/merch function

--- a/static/form.css
+++ b/static/form.css
@@ -1,5 +1,5 @@
 .form--box {
     padding: 15px 15px;
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', Tahoma, sans-serif;
     font-size: large;
 }
