--- a/templates/transactions/index.html
+++ b/templates/transactions/index.html
@@ -26,8 +26,12 @@
         </td>
     </tr>
     {% endfor %}
+    <tr></tr>
+    <tr class="spend--box">
+        <td>{{total_spend}}¥</td>
+        <td>TOTAL SPEND</td>
+    </tr>
 </table>
-<p>Total spend = {{total_spend}}</p>
 <button class="transactions--button">
     <a href="/transactions/new">ADD NEW TRANSACTION</a>
 </button>
