date attribute added to transactions

--- a/templates/transactions/edit.html
+++ b/templates/transactions/edit.html
@@ -25,6 +25,11 @@
         </select>
     </div>
     <br>
+    <div>
+        <label for="date">Update date of transaction : </label>
+        <input type="date" id="date" name="date">
+    </div>
+    <br>
     <button type="submit">UPDATE</button>
 
 
