--- a/templates/transactions/new.html
+++ b/templates/transactions/new.html
@@ -29,5 +29,10 @@
     </select>
 </div>
 <br>
+<div>
+    <label for="date">Date of transaction : </label>
+    <input type="date" id="date" name="date">
+</div>
+<br>
 <button class="submit--button" type="submit">SUBMIT</button>
 {% endblock %}
