--- a/static/style.css
+++ b/static/style.css
@@ -50,14 +50,14 @@ body > header {
 
 .spend-box {
     display: flex;
-    width: 40%;
+    width: 34%;
     justify-content: space-around;
     padding-inline: 15px;
     background-color: rgb(85, 117, 211);
     color: white;
     font-size: larger;
-    margin-block-end: 10px;
-}
+    margin-top: 10px;
+    }
 
 
 
