fixed edit active items only

--- a/templates/transactions/edit.html
+++ b/templates/transactions/edit.html
@@ -11,7 +11,8 @@
         <label for="tag">Update spending type : </label> 
         <select id="tag" name="tag">
             {% for tag in all_tags %}
-            <option value="{{ tag.id }}">{{ tag.spending_type }}</option>
+            <option value="{{ tag.id }}">   
+            {% if tag.active == True %}{{ tag.spending_type }}{% endif %}</option>
             {% endfor %}
         </select>
     </div>
@@ -20,7 +21,8 @@
         <label for="merchant">Update merchant : </label> 
         <select id="merchant" name="merchant">
             {% for merchant in all_merchants %}
-            <option value="{{ merchant.id }}">{{ merchant.name }}</option>
+            <option value="{{ merchant.id }}">
+            {% if merchant.active == True %}{{ merchant.name }}{% endif %}</option>
             {% endfor %}
         </select>
     </div>
