sort by date or amount with hover detail

--- a/templates/transactions/amount.html
+++ b/templates/transactions/amount.html
@@ -3,13 +3,13 @@
 {% block content %}
 <table>
     <tr>
-        <th class="tooltip">
-            <a href="/transactions/sortby_amount">AMOUNT</a>
-            <span class="tooltiptext">Sort by amount</span>
-        </th>
+        <th>AMOUNT</th>
         <th>TYPE</th>
         <th>MERCHANT</th>
-        <th>DATE</th>
+        <th class="tooltip">
+            <a href="/transactions/sortby_date">DATE</a>
+            <span class="tooltiptext">Sort by date</span>
+        </th>
         <th>EDIT</th>
         <th>DELETE</th>
     </tr>
@@ -35,11 +35,11 @@
 <div class="spend-box">
     <p id="box1">{{total_spend}}¥</p>
     <p id="box2">TOTAL SPEND</p>
+    
 </div>
 
 <button class="transactions--button">
     <a href="/transactions/new">ADD NEW TRANSACTION</a>
 </button>
-
 
 {% endblock %}
