--- a/static/table.css
+++ b/static/table.css
@@ -11,10 +11,25 @@ th, td {
     text-align: center;
 }
 
-.spend--box {
-    background-color: rgb(85, 117, 211);
-    color: white;
-    font-size: larger;
-    padding: 10px;
-    margin: 15px;
+.tooltip {
+    position: relative;
+    justify-content: center;
 }
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    bottom: 100%;
+    left: 25%;
+    background-color:seashell;
+    color: black;
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
+
