--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,9 @@
         <nav>
             <ul id="top-bar">
                 <li>
+                    <a href="/overview">Overview</a>
+                </li>
+                <li>
                     <a href="/transactions">Transactions</a>
                 </li>
                 <li>
