--- a/static/style.css
+++ b/static/style.css
@@ -59,6 +59,38 @@ body > header {
     margin-top: 10px;
     }
 
+.wrap {
+    overflow: hidden;
+    position: relative;
+}
+
+.home-image {
+    opacity: 0.1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+}
+
+.home-content {
+    position:relative;
+}
+
+.inline-box {
+    display: flex;
+}
+/* .home-image {
+        width:100%;
+        height:100vh;
+        url('images/ash.background-image: jpeg');
+        opacity: 0.1;
+        background-repeat: no-repeat;
+        background-size: cover;
+        overflow: hidden;
+        position: relative;
+      } */
+
 
 
 
