--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         <nav>
             <ul id="top-bar">
                 <li>
-                    <a href="/overview">Overview</a>
+                    <a href="/">Overview</a>
                 </li>
                 <li>
                     <a href="/transactions">Transactions</a>
@@ -38,5 +38,7 @@
 
             {% endblock %}
     </section>
+    {%block home%}
+    {% endblock %}
 </body>
 </html>
