--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,19 @@
 {% extends "base.html" %}
-
-{% block content %}
-<p> check this is working </p>
+{% block home %}
+<div class="wrap">
+    <form action="/", method='post'>
+    <img class="home-image" src="static/images/ash.jpeg" alt="Ash and Pikachu">
+    <div class="home-content">
+        <div>
+            <label for="spending-limit">Set your spending limit : </label> 
+            <input type="number" step="100" id="spending-limit" name="spending-limit" placeholder="select amount">
+        </div>
+        <div>
+            <label for="notification-limit">Select notification point :</label> 
+            <input type="number" step="100" id="notification-limit" name="notification-limit" placeholder="select amount">    
+        </div>
+        <button class="submit--button" type="submit">SUBMIT</button>
+    </div>
+    </form>
+</div>
 {% endblock %}
