--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,15 @@
     <img class="home-image" src="static/images/ash.jpeg" alt="Ash and Pikachu">
     <div class="home-content">
         <div>
-            <label for="spending-limit">Set your spending limit : </label> 
-            <input type="number" step="100" id="spending-limit" name="spending-limit" placeholder="select amount">
+            <label for="spending-limit">Set your spending limit (¥) : </label> 
+            <input class="form--box" type="number" step="100" id="spending-limit" name="spending-limit" placeholder="select amount">
         </div>
+        <br>
         <div>
-            <label for="notification-limit">Select notification point :</label> 
-            <input type="number" step="100" id="notification-limit" name="notification-limit" placeholder="select amount">    
+            <label for="notification-limit">Notifiation point (i.e when you want us to notify you) (¥) :</label> 
+            <input class="form--box" type="number" step="100" id="notification-limit" name="notification-limit" placeholder="select amount">    
         </div>
+        <br>
         <button class="submit--button" type="submit">SUBMIT</button>
     </div>
     </form>
