--- a/static/style.css
+++ b/static/style.css
@@ -59,37 +59,19 @@ body > header {
     margin-top: 10px;
     }
 
-.wrap {
-    overflow: hidden;
-    position: relative;
+.home-page {
+    display: flex;
 }
 
-.home-image {
-    opacity: 0.1;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: auto;
-}
-
-.home-content {
-    position:relative;
+#text {
+    padding-left: 20px;
 }
 
 .inline-box {
     display: flex;
+    justify-content: space-around;
 }
-/* .home-image {
-        width:100%;
-        height:100vh;
-        url('images/ash.background-image: jpeg');
-        opacity: 0.1;
-        background-repeat: no-repeat;
-        background-size: cover;
-        overflow: hidden;
-        position: relative;
-      } */
+
 
 
 
