trying to get budget notification to render

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,6 @@
     </div>
 </div>
     <button class="transactions-button">
-            <a href="/limits">EDIT SPENDING LIMITS</a>
+            <a href="/limits/new">EDIT SPENDING LIMITS</a>
         </button>
 {% endblock %}
