--- a/static/style.css
+++ b/static/style.css
@@ -48,6 +48,18 @@ body > header {
     width: 50%;
 }
 
+.notification {
+    background-color: rgba(0, 255, 60, 0.502);
+    width: 100%;
+    height: 50px;
+    border: none;
+    font-family: 'Montserrat', sans-serif;
+    font-size: large;
+    text-align: center;
+    vertical-align: center;
+    padding-top: 25px;
+}
+
 .spend-box {
     display: flex;
     width: 34%;
