--- a/templates/transactions/index.html
+++ b/templates/transactions/index.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% if at_limit == True %}
+<p class="notification">You are close to your spending limit!</p>
+{% endif %}
 <table>
     <tr>
         <th class="tooltip">
@@ -44,7 +47,4 @@
 <button class="transactions-button">
     <a href="/transactions/new">ADD NEW TRANSACTION</a>
 </button>
-{% if at_limit == True %}
-<p>you are close to your spending limit</p>
-{% endif %}
 {% endblock %}
