budget and landing page improved

--- a/templates/merchants/index.html
+++ b/templates/merchants/index.html
@@ -17,7 +17,7 @@
                 </td>
                 <td>
                     <form class="edit-form" action="/merchants/{{merchant.id}}/edit" method="POST">
-                    <button class="edit--button">&#10003;</button>
+                    <button class="edit-button">&#10003;</button>
                     </form>
                 </td>
             </tr>    
