--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,15 @@
         <img src="static/images/ash.jpeg" alt="Ash and Pikachu">
     </div>
     <div id="text">
-        <h3>Welcome, Pokémon Trainer</h3>
+        <h3>Welcome, Pokémon Trainer!</h3>
         <h3>Use this app to track your spending</h4>
-        <h3>Click below to get started</h3>
+        <h3>Your current total spend is:</h3>
+        <div>{{ total_spend }}</div>
+        <h3>You have set your spending limit at: </h3>
+        <div>{{ limit.spending_limit }}</div>
     </div>
 </div>
     <button class="transactions-button">
-            <a href="/limits/new">EDIT SPENDING LIMITS</a>
+            <a href="/limits/new">ADJUST SPENDING LIMITS</a>
         </button>
 {% endblock %}
