--- a/templates/tags/index.html
+++ b/templates/tags/index.html
@@ -17,7 +17,7 @@
             </td>
             <td>
                 <form class="edit-form" action="/tags/{{tag.id}}/edit" method="POST">
-                <button class="edit--button">&#10003;</button>
+                <button class="edit-button">&#10003;</button>
                 </form>
             </td>
         </tr>    
