--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
         <h3>Welcome, Pokémon Trainer!</h3>
         <h3>Use this app to track your spending</h4>
         <h3>Your current total spend is:</h3>
-        <div>{{ total_spend }}</div>
+        <div class="front-page-spend">¥{{ total_spend }}</div>
         <h3>You have set your spending limit at: </h3>
-        <div>{{ limit.spending_limit }}</div>
+        <div class="front-page-limit">¥{{ limit.spending_limit }}</div>
     </div>
 </div>
     <button class="transactions-button">
