limit notifications on spending page improved

--- a/templates/transactions/index.html
+++ b/templates/transactions/index.html
@@ -4,6 +4,12 @@
 {% if at_limit == True %}
 <p class="notification">You are close to your spending limit!</p>
 {% endif %}
+{% if over_limit == True %}
+<p class="notification-drama">You have exceeded your spending limit</p>
+{% endif %}
+{% if on_limit == True %}
+<p class="notification-medium-drama">You are at your spending limit</p>
+{% endif %}
 <table>
     <tr>
         <th class="tooltip">
@@ -21,7 +27,7 @@
     </tr>
     {% for transaction in transactions %}
     <tr>
-        <td>¥{{ transaction.amount }}</td>
+        <td>¥ {{ transaction.amount }}</td>
         <td>{{ transaction.tag.spending_type }}</td>
         <td>{{ transaction.merchant.name }}</td>
         <td>{{ transaction.date }}</td>
@@ -39,7 +45,7 @@
     {% endfor %}
 </table>
 <div class="spend-box">
-    <p id="box1">¥{{total_spend}}</p>
+    <p id="box1">¥ {{total_spend}}</p>
     <p id="box2">TOTAL SPEND</p>
     
 </div>
