--- a/static/style.css
+++ b/static/style.css
@@ -60,6 +60,30 @@ body > header {
     padding-top: 25px;
 }
 
+.notification-drama {
+    background-color: rgba(255, 0, 0, 0.797);
+    width: 100%;
+    height: 50px;
+    border: none;
+    font-family: 'Montserrat', sans-serif;
+    font-size: large;
+    text-align: center;
+    vertical-align: center;
+    padding-top: 25px;
+}
+
+.notification-medium-drama {
+    background-color: rgba(65, 105, 225, 0.797);
+    width: 100%;
+    height: 50px;
+    border: none;
+    font-family: 'Montserrat', sans-serif;
+    font-size: large;
+    text-align: center;
+    vertical-align: center;
+    padding-top: 25px;
+}
+
 .spend-box {
     display: flex;
     width: 34%;
