--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     </div>
     <div id="text">
         <h3>Welcome, Pokémon Trainer!</h3>
-        <h3>Use this app to track your spending</h4>
+        <h3>Use this app to track your spending.</h4>
         <h3>Your current total spend is:</h3>
         <div class="front-page-spend">¥ {{ total_spend }}</div>
         <h3>You have set your spending limit at: </h3>
