--- a/static/style.css
+++ b/static/style.css
@@ -96,11 +96,12 @@ body > header {
     }
 
 .home-page {
-    display: flex;
+    display: flex
 }
 
+
 #text {
-    padding-left: 20px;
+    padding-left: 130px;
 }
 
 .inline-box {
