front page change if no limit set

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,13 @@
         <h3>Use this app to track your spending.</h4>
         <h3>Your current total spend is:</h3>
         <div class="front-page-spend">¥ {{ total_spend }}</div>
+        {% if limit != None %}
         <h3>You have set your spending limit at: </h3>
         <div class="front-page-limit">¥ {{ limit.spending_limit }}</div>
+        {% endif %}
+        {% if limit == None %}
+        <h3>Set your spending limit by clicking below</h3>
+        {% endif %}
     </div>
 </div>
     <button class="transactions-button">
